# cs50p-2024-gold-vault

./: .gitignore  README.md  index.html  pyproject.toml  requirements-dev.txt
.github/workflows/: coverage.yml
docs/: cli.md  crypto.md  error_handling.md  parser.md  structure.md  tests.md
docs/history/htmlcov/: class_index.html  function_index.html  index.html  z_30a529d8a9b3bbba_test_types_py.html  z_39b0c4a8201d6ad9_test_crypto_py.html  z_40476650f05d3c18_error_handler_utils_py.html  z_40476650f05d3c18_test_handle_parser_py.html  z_42a0a047a95304ba_test_factories_py.html  z_6693ffa2690dcf19_test_decrypt_py.html  z_6baf6b24604ca8fe_test_encrypt_py.html  z_aa35e361116b1501_test_get_py.html  z_bc0b3f99b3b2cfcd_test_crypto_utils_py.html  z_bc0b3f99b3b2cfcd_test_file_utils_py.html  z_bc0b3f99b3b2cfcd_test_link_processor_py.html  z_f14542c302fc3238___init___py.html  z_f14542c302fc3238_test_crypto_exceptions_py.html  z_ffa037932fd9f62c_test_error_handler_type_py.html
htmlcov/: status.json  z_182d203c83b69e2a_test_parser_validator_py.html  z_39b0c4a8201d6ad9_test_crypto_main_py.html  z_40476650f05d3c18___init___py.html  z_40476650f05d3c18_test_error_handler_py.html  z_40476650f05d3c18_test_handle_crypto_py.html  z_a9997f8a7da3edba_test_factory_py.html  z_aa35e361116b1501_test_parser_py.html  z_be96404bb98c0974_test_integration_get_py.html  z_f14542c302fc3238_exception_utils_py.html  z_f14542c302fc3238_test_parser_exceptions_py.html
tests/unit/test_crypto/: test_crypto.py
