[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-vault"
version = "0.1.0"
description = "CLI tool for reversible file encryption and decryption"
requires-python = ">=3.12"

[project.scripts]
gvault = "gvault.cli:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.black]
line-length = 120

target-version = ["py312"]

include = "\.pyi?$"
extend-exclude = """
/(
    \.git

  | \.hg
  | \.mypy_cache
  | \.tox

  | \.venv
  | _build
  | buck-out
)/
"""

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "__pycache__",
    ".venv",
]

# Ensures pytest finds test files
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# Speed up tests
addopts = "--reuse-db"
